Fix prefix wrapping again
nowrap is not enough because it still breaks on hyphens sometimes. But
since we're using pre now, we need to make sure no whitespace/newline is
around each <span> because they will be outputted.

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -53,7 +53,7 @@ td.prefix {
     text-align: right;
     vertical-align: top;
     padding-right: 5px;
-    white-space: nowrap;
+    white-space: pre;
 }
 td.message {
     word-wrap: break-word;
